<resources>
    <string name="app_name">PMS</string>

     Strings related to login
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="clarity">Diamond Clarity</string>
    <string name="ringSize">Ring Size</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="blank">/</string>
    <string name="space">" "</string>
    <string name="cad">CAD</string>
    <string name="casting">CASTING</string>
    <string name="filing">FILING</string>
    <string name="setting">SETTING</string>
    <string name="finishing">FINISHING</string>
    <string name="dispatch">DISPATCH</string>
    <string name="selectphases">Select Phases</string>
</resources>
